# Artheris_UPD_Web

./: .gitignore  Cargo.toml  README.md
client/: package-lock.json  package.json  vite.config.ts
client/src/components/: AnimatedBackground.tsx  FlightAnalyticsPanel.tsx  MotorCard.tsx  QuickActions.tsx
client/src/hooks/: useFlightAnalytics.ts  useFlightTime.ts  useWebSocket.ts
client/src/page/: AnglesDisplay.tsx  Calibration.tsx  CameraPage.tsx  DeviceProfile.tsx  Dron3D.tsx  Flights.tsx  Flights_id.tsx  LedOption.tsx  ModeSwitch.tsx  MotorSimulation.tsx  MotorsOption.tsx  SensorData.tsx  Settings.tsx
client/src/types/: angles.d.ts
logs/: artheris.log.2025-08-25
src/: main.rs
src/config/: function.rs  imageProcessor.js  webrtc.js
src/ws_server/: http_server.rs  mod.rs  pdi.py  questdb.rs  server.rs
